# redis-study

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/infra/: depends.py
app/infra/cache/: connection.py
app/infra/cache/repo/: redis_repo.py
app/utils/: redis_basics.py
configs/: __init__.py
